Quorum/Library/Tests/Inheritance/Fail/TemplateB.quorum
use TemplateD

class TemplateB<Type> is TemplateD<Type>
end